--- a/javascriptSnippet.html
+++ b/javascriptSnippet.html
@@ -23,6 +23,10 @@ $(document).ready(function(e) {
 });
 </script>
 <!-- END slideToggle Function (jQuery) -->
+
+<script>
+</script>
+
 </head>
 
 <!-- onClick Alert HTML -->
@@ -37,6 +41,11 @@ $(document).ready(function(e) {
 <p>Ridiculus Ligula Porta Dapibus Elit</p>
 </div>
 <!-- END slideToggle Function HTML -->
+
+<br><br>
+
+<!-- -->
+<!-- END -->
 <body>
 </body>
 </html>
