--- a/snippets.html
+++ b/snippets.html
@@ -6,7 +6,49 @@
 </head>
 
 
+
+<!-- BREAK -->
+<br><br>
+<br><br>
+<br><br>
+<!-- BREAK -->
+
+
+<!--[if gte mso 9]>
+<v:background fill="t">
+   <v:fill type="tile" src="https://ecommission.com/email/careers/headerCareers.png" />
+</v:background>
+<![endif]-->
+
+<table width="600" cellpadding="0" cellspacing="0" border="0">
+<tr>
+<td align="center" background="https://ecommission.com/email/careers/headerCareers.png">
+<table width="100%" height="320" cellpadding="0" cellspacing="0" border="0">
+<tr>
+<td>
+<p class="title" style="width:350px;font-family:Helvetica, Arial, sans-serif;font-size:24px;line-height:30px;font-weight:600;color:#0085b2;padding:20px;margin-top:60px;">If you can see this text over the image, then background is successful!</p>
+</td>
+</tr>
+</table>
+</td>
+
+  </tr>
+</table>
+
+<!-- BREAK -->
+<br><br>
+<br><br>
+<br><br>
+<!-- BREAK -->
+
+
 <a name="formJump">FORM AREA</a>
+
+<!-- BREAK -->
+<br><br>
+<br><br>
+<br><br>
+<!-- BREAK -->
 
 
 <!-- Button Align LEFT -->
