--- a/bootstrapBoilerplate.html
+++ b/bootstrapBoilerplate.html
@@ -6,14 +6,16 @@
 <title> ... </title>
 <!-- So that mobile will display zoom'd in -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- jQuery served for Google -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Main CSS -->
+<link rel="stylesheet" href=".css">
 <!-- Bootstrap minified Font Awesome Icons -->
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+<!-- jQuery served for Google -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
