--- a/snippets.html
+++ b/snippets.html
@@ -5,7 +5,17 @@
 <title>eComm Snippets</title>
 </head>
 
+<!-- BREAK -->
+<br><br>
+<br><br>
+<br><br>
+<!-- BREAK -->
 
+<!-- Floats 
+  .left{float:left}
+  .right{float:right}
+  .clear{clear:both}
+-->
 
 <!-- BREAK -->
 <br><br>
