--- a/responsivenav_subnav.html
+++ b/responsivenav_subnav.html
@@ -136,7 +136,7 @@
   <div class="nav-inner">
     <ul class="nav">
       <li>
-        <a href="#">Artist</a>
+        <a href="#">Artist &#x21af;</a>
         <ul class="nav-submenu">
           <li><a href="#">Richie Lucero</a></li>
           <li><a href="#">Shay Haas</a></li>
